# quant_framework

./: README.md  pyproject.toml  test_engine_simple.py
builtins/data/: tushare_source.py
cli/: __init__.py  main.py
config/: example.toml
contrib/backtest/: __init__.py  simple_backtest.py
contrib/data/: __init__.py  akshare_source.py
contrib/risk/: __init__.py  basic_risk_plugin.py
contrib/strategy/: __init__.py  double_low.py
core/: __init__.py  cache.py  config.py  context.py  engine.py  events.py  exceptions.py  logger.py  portfolio.py  risk.py
docs/: api.md  cli.md  quickstart.md
memory/: 2026-02-12.md
plugins/: __init__.py  base.py  hookspecs.py  manager.py  protocols.py  specs.py
scripts/: e2e_core_framework.py  e2e_full_backtest.py  e2e_test.py
tests/builtins/: test_akshare_source.py  test_double_low_strategy.py  test_simple_backtest.py  test_tushare_source.py
tests/cli/: test_main.py
tests/contrib/: test_basic_risk_plugin.py
tests/core/: test_cache.py  test_config.py  test_context.py  test_engine.py  test_exceptions.py  test_logger.py  test_portfolio.py  test_risk.py
tests/integration/: test_akshare_integration.py  test_p0_integration.py
tests/plugins/: test_base.py  test_hookspecs.py  test_manager.py
