[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "quant-plugin-framework"
version = "0.1.0"
description = "Plugin-first quantitative trading framework core"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "quant-team" }]
dependencies = [
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "mypy>=1.11.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q -m 'not integration' --cov=core --cov-report=term-missing --cov-fail-under=80"
markers = [
  "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["core"]

[tool.hatch.build.targets.wheel]
packages = ["core"]

[project.scripts]
quant = "cli.main:cli"
